WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175009
REGRESSION (
r217197
): New Yorker website hangs for a long time on load, lots of blank tiles
https://bugs.webkit.org/show_bug.cgi?id=175009
Summary
REGRESSION (r217197): New Yorker website hangs for a long time on load, lots ...
alan
Reported
2017-07-31 20:59:51 PDT
rdar://problem/33505791
Attachments
Patch
(10.20 KB, patch)
2017-07-31 21:08 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(10.38 KB, patch)
2017-08-01 13:35 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-07-31 21:08:49 PDT
Created
attachment 316831
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-08-01 12:59:01 PDT
Comment on
attachment 316831
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=316831&action=review
> Source/WebCore/ChangeLog:9 > + This patch ensures that we report the desktop, non-frame-flattened frame size for media queries.
"for media queries in subframes"
> Source/WebCore/ChangeLog:11 > + Some websites don't expect the iframes to be expanded and their media query callbacks code > + result in never ending layouts.
I think you should say a little more here about what the site was doing (MQ listener changing content, triggering resize across the MQ boundary).
> Source/WebCore/page/FrameView.cpp:-1387 > -
i want this one
> Source/WebCore/page/FrameView.cpp:5415 > + if (isFrameFlatteningValidForThisFrame() && !m_frameFlatteningViewSizeForMediaQuery) > + m_frameFlatteningViewSizeForMediaQuery = ScrollView::layoutSize();
Maybe do this somewhere you know you are already in a flattened frame layout.
> LayoutTests/ChangeLog:11 > + * fast/frames/flattening/media-query-growing-content-expected.txt: Added. > + * fast/frames/flattening/media-query-growing-content.html: Added. > + * fast/frames/flattening/resources/media-query-min-height-with-flattening.html: Added.
Please also test aspect-ratio and orientation media queries.
alan
Comment 3
2017-08-01 13:35:44 PDT
Created
attachment 316888
[details]
Patch
WebKit Commit Bot
Comment 4
2017-08-01 14:42:32 PDT
Comment on
attachment 316888
[details]
Patch Clearing flags on attachment: 316888 Committed
r220112
: <
http://trac.webkit.org/changeset/220112
>
WebKit Commit Bot
Comment 5
2017-08-01 14:42:34 PDT
All reviewed patches have been landed. Closing bug.
Michael Catanzaro
Comment 6
2018-02-15 17:46:19 PST
Hi Jason, why has
r220112
been reverted on the safari-604 and safari-605 branches, but not on trunk? Is there some regression that's somehow specific to those branches...?
Jason Marcell
Comment 7
2018-02-15 19:23:58 PST
Michael, I have asked Alan to comment.
alan
Comment 8
2018-02-15 21:31:37 PST
(In reply to Michael Catanzaro from
comment #6
)
> Hi Jason, why has
r220112
been reverted on the safari-604 and safari-605 > branches, but not on trunk? Is there some regression that's somehow specific > to those branches...?
See
bug 182859
, we are trying to fix it properly on trunk now.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug