REGRESSION (r217197): New Yorker website hangs for a long time on load, lots of blank tiles https://bugs.webkit.org/show_bug.cgi?id=175009 <rdar://problem/33505791>

Reviewed by Simon Fraser.

Source/WebCore:

This patch ensures that we report the desktop, non-frame-flattened frame size for media queries in subframes.
Some websites don't expect the iframes to be expanded to the size of the content and when the media query
callback mutates the content (triggering frame resize), they might end up getting into a never ending layout.

Test: fast/frames/flattening/media-query-growing-content.html

* css/MediaQueryEvaluator.cpp:
(WebCore::orientationEvaluate):
(WebCore::aspectRatioEvaluate):
(WebCore::heightEvaluate):
(WebCore::widthEvaluate):
* page/FrameView.cpp:
(WebCore::FrameView::layout):
(WebCore::FrameView::layoutSizeForMediaQuery const):
(WebCore::FrameView::evaluateMediaQueryList):
* page/FrameView.h:

LayoutTests:

* fast/frames/flattening/media-query-growing-content-expected.txt: Added.
* fast/frames/flattening/media-query-growing-content.html: Added.
* fast/frames/flattening/resources/media-query-min-height-with-flattening.html: Added.


Canonical link: https://commits.webkit.org/191819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220112 268f45cc-cd09-0410-ab3c-d52691b4dbfc